2004-12-03  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/awt/EventDispatchThread.java,
	libraries/javalib/java/awt/Toolkit.java,
	libraries/javalib/java/io/ObjectStreamClass.java,
	libraries/javalib/java/lang/reflect/Proxy.java,
	libraries/javalib/java/net/URL.java,
	libraries/javalib/java/security/SecureRandom.java,
	libraries/javalib/java/util/Timer.java,
	libraries/javalib/java/util/prefs/AbstractPreferences.java:
	Resynced with GNU Classpath.

	2004-12-02  Jeroen Frijters  <jeroen@frijters.net>

	* java/awt/EventDispatchThread.java,
	java/awt/Toolkit.java,
	java/io/ObjectStreamClass.java,
	java/lang/reflect/Proxy.java,
	java/net/URL.java,
	java/security/SecureRandom.java,
	java/util/Timer.java,
	java/util/prefs/AbstractPreferences.java,
	vm/reference/java/lang/VMProcess.java:
	Don't catch java.lang.ThreadDeath.

2004-12-03  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/gnu/java/net/protocol/file/Connection.java:
        Resynced with GNU Classpath.

	2004-12-02  Jeroen Frijters  <jeroen@frijters.net>

        * gnu/java/net/protocol/file/Connection.java
        (StaticData): New inner class to contain statics.
        (connect, getHeaderField): Modified to use StaticData.

2004-12-03  Dalibor Topic  <robilad@kaffe.org>

	*  libraries/javalib/javax/swing/AbstractListModel.java,
	libraries/javalib/javax/swing/DefaultSingleSelectionModel.java,
	libraries/javalib/javax/swing/JPopupMenu.java:
        Resynced with GNU Classpath.

	2004-12-01  Michael Koch  <konqueror@gmx.de>

        * javax/swing/AbstractListModel.java
        (fireContentsChanged): Simplified.
        (fireIntervalAdded): Likewise.
        (fireIntervalRemoved): Likewise.
        * javax/swing/DefaultSingleSelectionModel.java:
        Reformatted.
        (fireStateChanged): Simplified.
        * javax/swing/JPopupMenu.java
        (setSelectionModel): Set property.

2004-12-03  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/gnu/java/nio/SelectorImpl.java: